# tir

./: AGENTS.md  Cargo.toml  README.md  book.toml
.github/workflows/: coverage.yaml  docs.yaml  fuzz.yaml  lint.yaml  verify-smt.yaml
backends/arm64/: Cargo.toml
backends/arm64/defs/: data_processing.tmdl
backends/arm64/src/: lib.rs  obj.rs
backends/arm64/tests/: lit.rs
backends/common/: Cargo.toml
backends/common/src/: cfg.rs  lexer.rs  lib.rs  liveness.rs  operations.rs  parser.rs  pipeline.rs  regalloc.rs  target.rs
backends/riscv/: Cargo.toml  build.rs
backends/riscv/checks/asm/: abi-register-names.S  arithmetic-rv64.S  branches-rv32.S  extension-gating.S  memory_strings-rv32.S  shifts-rv64.S  syscall-rv32.S  xlen-gating.S  zicsr-rv32.S
backends/riscv/checks/isel/: arith.tir  branch-fusion.tir  builtin-add-module.tir  single-add.tir  two-functions.tir  vector.tir
backends/riscv/checks/regalloc/: arith.tir
backends/riscv/defs/: base.tmdl  vector.tmdl  zicsr.tmdl
backends/riscv/src/: lib.rs  obj.rs
backends/riscv/tests/: lit.rs
backends/targets/: Cargo.toml
backends/targets/src/: lib.rs
backends/targets/tests/: lit.rs
backends/x86/: Cargo.toml  build.rs
backends/x86/checks/: test_suite.toml
backends/x86/defs/: main.tmdl  perf.tmdl  scalar.tmdl
backends/x86/src/: lib.rs  obj.rs
backends/x86/tests/: lit.rs
backends/x86_64/: BLOCKERS.md  Cargo.toml  README.md  build.rs
backends/x86_64/checks/: test_suite.toml
backends/x86_64/defs/: base.tmdl  main.tmdl
backends/x86_64/src/: lib.rs
backends/x86_64/tests/: encoding.rs  lit.rs  roundtrip.rs
bindings/capi/: Cargo.toml  cbindgen.toml
bindings/capi/src/: lib.rs
core/: Cargo.toml
core/benches/: lexer.rs
core/benches/Inputs/: large.s
core/checks/IRRoundtrip/: arith.tir  br-with-args.tir  br.tir  call.tir  cond-br.tir  func-void.tir  func.tir  ptr-alloca-store-load.tir  scf-for-result.tir  scf-for.tir  scf-if-result.tir  scf-if.tir  scf-while-result.tir  scf-while.tir
core/checks/Mem2Reg/: control_flow_keep.tir  control_flow_promote.tir  dead_alloca_erased.tir  multiple_stores_keep.tir
core/checks/Verifier/: addi-operands-same-type.tir  cond-br-requires-i1.tir  scf-for-carried-type.tir  scf-if-requires-i1.tir  scf-if-result-type.tir
core/src/: attributes.rs  block.rs  context.rs  diagnostics.rs  interfaces.rs  ir_formatter.rs  lib.rs  operation.rs  region.rs  region_format.rs  schema.rs  ty.rs  value.rs
core/src/analysis/: dominance.rs  gated_ssa.rs  mod.rs
core/src/backend/: dce.rs  lexer.rs  lower.rs  mod.rs  operations.rs  parser.rs  pipeline.rs  printer.rs  regalloc.rs  sched.rs  target.rs
core/src/backend/binary/: ascii.rs  elf.rs  elf_read.rs  format.rs  mod.rs  writer.rs
core/src/backend/isel/: builder.rs  cover.rs  ematch.rs  emit.rs  mod.rs  node.rs  pattern.rs  rewrites.rs  tests.rs
core/src/dialects/: mod.rs
core/src/dialects/builtin/: arith.rs  call.rs  control.rs  func.rs  mod.rs  module.rs
core/src/dialects/ptr/: mod.rs
core/src/dialects/scf/: mod.rs
core/src/dialects/vector/: mod.rs
core/src/graph/: dominance.rs  mod.rs  postorder.rs
core/src/parse/: ir.rs  text.rs
core/src/passes/: mem2reg.rs
core/src/sem_expr/: exec.rs  infer.rs  mod.rs  unroll.rs
core/src/utils/: apint.rs  mod.rs  raw_bits.rs
core/tests/: lit.rs
docs/: SUMMARY.md
docs/design/: instruction_selection.md  object_emission.md  simulator.md
docs/tmdl/: btor2_model_checking.md  smt_verification.md  syntax.md
fcc/: Cargo.toml
fcc/benches/: codegen.rs
fcc/checks/Ast/: calls.c  control_flow.c  do_while.c  for_loop.c  precedence.c  sum.c  while_loop.c
fcc/checks/Codegen/: do_continue.c  do_while.c  for_break.c  for_loop.c  if_else.c  while_loop.c
fcc/checks/Inputs/: branch_select.c  calls.c  control_flow.c  count_up.c  do_continue.c  do_while.c  for_break.c  for_loop.c  if_nested_ternary.c  precedence.c  while_count.c  while_loop.c
fcc/checks/Preprocessor/: if_nested_ternary.c
fcc/src/: ast.rs  cir.rs  codegen.rs  codegen_tests.rs  diagnostics.rs  driver.rs  lexer.rs  lib.rs  parser.rs  preprocessor.rs
fcc/tests/: lit.rs
lpl/: Cargo.toml
macros/: Cargo.toml
simulator/isasim/: Cargo.toml
simulator/isasim/checks/riscv/exec/: konata.S  multiply.S  rv32-widths.S  trap-ecall.S  zicsr-counters-rv32.S  zicsr-counters.S
simulator/isasim/src/: dump.rs  konata.rs  main.rs  memory.rs
simulator/simcore/: Cargo.toml
simulator/simcore/src/: error.rs  executor.rs  lib.rs  program.rs  scoreboard.rs  (+1 more)
tmdl/: Cargo.toml
tmdl/checks/Btor2/: checker.tmdl
tmdl/checks/Inputs/: smtlib.tmdl
tmdl/checks/Parser/: simple.tmdl
tmdl/checks/SmtLib/: semantics.tmdl
tmdl/src/: ast.rs  btor2gen.rs  compiler.rs  lexer.rs  lib.rs  parser.rs  rustgen.rs  sem_expr_state.rs  sema.rs  smtlibgen.rs  typeck.rs  types.rs  utils.rs
tools/: Cargo.toml
tools/checks/: target-parsers.tir  test_suite.toml
tools/checks/error/: unknown-target.tir
tools/checks/llvm-import/: basic.tir  control-flow.tir
tools/checks/llvm-import/error/: unsupported.tir
tools/src/: common.rs  lib.rs
tools/src/llvm_import/: mod.rs
tools/src/mc/: mod.rs
tools/src/opt/: mod.rs
tools/src/readobj/: mod.rs
tools/src/sched/: event.rs  mod.rs
tools/tests/: lit.rs
torch-inductor/: Cargo.toml  README.md
torch-inductor/python/: demo_nanogpt.py
torch-inductor/src/: lib.rs
torch/src/: lib.rs
torch/tests/: nanogpt.rs
utils/bindgen/: Cargo.toml
utils/capi/: .gitignore  Cargo.toml  build.rs  cbindgen.toml
utils/capi/include/: tir.h
utils/capi/src/: inspect.rs  lib.rs  mutate.rs  target.rs  types.rs
utils/capi/tests/: ffi.rs  inspect.rs  mutate.rs  schema.rs  smoke.c  target.rs  types.rs
utils/check-runner/: Cargo.toml
utils/filecheck/: Cargo.toml
utils/fuzz/: Cargo.toml
utils/fuzz/fuzz_targets/: arm64-assembly.rs  riscv-assembly.rs
utils/haskell/: README.md
utils/llvm/: Cargo.toml
utils/python/: README.md
xtask/: verify-smt-armv8.toml  verify-smt-riscv32.toml  verify-smt-riscv64.toml
xtask/src/: main.rs  utils.rs  verify_btor2.rs  verify_smt.rs
(+39 files in other folders)
