[workspace]
resolver = "2"

members = [
    "utils/filecheck",
    "utils/lit",
    "utils/not",
    "tmdl",
    "xtask",
    "core",
    "utils/macros",
    "backends/common",
    "backends/riscv",
    "utils/fuzz",
    "simulator/isasim",
    "simulator/simcore",
    "backends/arm64",
    "fcc",
    "backends/targets",
    "utils/isa-test-suite",
    "tools",
]

[workspace.dependencies]
tir-targets = { path = "backends/targets" }
tir = { path = "core" }
tir-be-common = { path = "backends/common" }
tir-sim = { path = "simulator/simcore" }

clap = "4.6.1"
criterion = "0.8.2"

[profile.bench]
debug = true
lto = true
