[workspace]
resolver = "2"

members = [
    "utils/filecheck",
    "utils/lit",
    "utils/not",
    "tmdl",
    "xtask",
    "core",
    "utils/macros",
    "backends/riscv",
    "utils/fuzz",
    "simulator/isasim",
    "simulator/simcore",
    "backends/arm64",
    "backends/x86_64",
    "fcc",
    "utils/isa-test-suite",
    "utils/capi",
    "utils/adt",
    "utils/graph",
    "utils/symbolic",
    "tools",
]

[workspace.dependencies]
tir = { path = "core" }
tir-sim = { path = "simulator/simcore" }
tmdl = { path = "tmdl" }

# Common utils
tir-adt = { path = "utils/adt" }
tir-graph = { path = "utils/graph" }
tir-symbolic = { path = "utils/symbolic" }
tir-macros = { path = "utils/macros" }
tir-lit = { path = "utils/lit" }

# Per-target crates
tir-riscv = { path = "backends/riscv" }
tir-arm64 = { path = "backends/arm64" }
tir-x86_64 = { path = "backends/x86_64" }

anyhow = "1.0.102"
ariadne = "0.6.0"
clap = "4.6.1"
criterion = "0.8.2"
linkme = "0.3.36"
logos = "0.16.1"
thiserror = "2.0.18"
quote = "1.0.45"
prettyplease = "0.2.37"
proc-macro2 = "1.0.106"
syn = "2.0.117"
chumsky = "0.13.0"
serde = "1.0.228"
serde_json = "1.0.150"
regex = "1.12.4"
libfuzzer-sys = "0.4"
proptest = "1.11.0"

[profile.bench]
debug = true
lto = true
