[package]
name = "fcc"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.16.1"
chumsky = "0.13.0"
tir = { path = "../core" }
clap = { version = "4.6.0", features = ["derive"] }

[dev-dependencies]
tir-lit = { path = "../utils/lit" }

[[bin]]
name = "fcc"
path = "bin.rs"

[[test]]
name = "lit"
harness = false
