[package]
name = "tmdl"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.5.1"
clap = { version = "4.5.9", features = ["derive"] }
thiserror = "2.0"
quote = "1.0"
prettyplease = "0.2.25"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["parsing"] }
chumsky = "0.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tir = { path = "../core" }

[[bin]]
name = "tmdlc"
path = "bin.rs"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tir-lit = { path = "../utils/lit" }

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parser"
harness = false

[[test]]
name = "lit"
harness = false
