[package]
name = "tir-riscv"
version = "0.1.0"
edition = "2024"

[dependencies]
tir = { path = "../../core" }
tir-be-common = { path = "../common" }

[build-dependencies]
tmdl = { path = "../../tmdl" }

[dev-dependencies]
insta = "1.43.1"
criterion = { version = "0.8", features = ["html_reports"] }
tir-lit = { path = "../../utils/lit" }

[[test]]
name = "lit"
harness = false
