[package]
name = "tir-targets"
version = "0.1.0"
edition = "2024"

# Target registry: maps `--march`/`--mcpu` names to a `TargetMachine` that
# bundles a backend's dialects, isel/regalloc passes, asm parser and machine
# models. Shared by `tir-mc` and `isasim` so target selection lives in one place.

[dependencies]
tir.workspace = true
tir-be-common.workspace = true
tir-riscv.workspace = true
tir-arm64.workspace = true
tir-x86.workspace = true

[dev-dependencies]
tir-lit.workspace = true

[[test]]
name = "lit"
harness = false
