[package]
name = "tir-capi"
version = "0.1.0"
edition = "2024"

[lib]
name = "tir_capi"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
tir.workspace = true
tir-riscv.workspace = true
tir-arm64.workspace = true
tir-x86_64.workspace = true

[dev-dependencies]
tir.workspace = true
serde_json = "1"

[build-dependencies]
cbindgen = "0.28"
