[package]
name = "filecheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "filecheck"
path = "src/lib.rs"

[[bin]]
name = "filecheck"
path = "src/main.rs"

[dependencies]
chumsky = "0.13.0"
ariadne = "0.5.1"
regex = "1.10"
clap = { version = "4.5.4", features = ["derive"] }
