[package]
name = "tir-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys.workspace = true
tmdl.workspace = true
tir.workspace = true
tir-riscv.workspace = true
tir-arm64.workspace = true

[[bin]]
name = "tmdl-fuzz"
path = "fuzz_targets/tmdl.rs"
test = false
doc = false
bench = false

[[bin]]
name = "riscv-assembly-fuzz"
path = "fuzz_targets/riscv-assembly.rs"
test = false
doc = false
bench = false

[[bin]]
name = "arm64-assembly-fuzz"
path = "fuzz_targets/arm64-assembly.rs"
test = false
doc = false
bench = false
